Fix a bunch of classpath issues